<resources>
    <string name="app_name">MumsApp</string>

    <string name="facebook_app_id">189221238331319</string>
    <string name="fb_login_protocol_scheme">fb189221238331319</string>

    <string name="or">or</string>

    <string name="template_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec risus mi, tempor vel feugiat eget, suscipit sed metus. Aliquam dapibus imperdiet iaculis. Aliquam mollis accumsan leo ac luctus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</string>

    <!-- Authentication -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_official_page">Create Official Page</string>
    <string name="sign_up_google">Sign Up with Google</string>
    <string name="sign_up_facebook">Sign Up with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_account">Already have an account? Sign In</string>
    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="forget_password">Forget password?</string>
    <string name="advertise">Advertise</string>
    <string name="school">School</string>
    <string name="create_school_service_page">Create School &amp; Orgs.</string>
    <string name="create_new">Create New</string>
    <string name="first_name_error">Please enter your first name</string>
    <string name="last_name_error">Please enter your last name</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="empty_password_error">Please enter your password</string>
    <string name="weak_password_error">The password must contain a minimum of 4 characters.</string>
    <string name="password_confirmation_error">The entered passwords are different.</string>
    <string name="i_agree_the">I agree the</string>
    <string name="terms_and_conditions"><u>terms&amp;conditions</u></string>
    <string name="terms_and_conditions_error">Please accept terms &amp; conditions</string>
    <string name="invalid_credentials">Invalid email or password</string>

    <string name="me">Me</string>
    <string name="lets_talk">"Let's talk"</string>
    <string name="lobby">Lobby</string>
    <string name="shop">Shop</string>
    <string name="mumsapp_offers_and_services">MumsApp Offers and Services</string>
    <string name="mumsapp_offers">MumsApp Offers</string>
    <string name="holiday">Holiday</string>
    <string name="mumsapp_health">MumsApp Health</string>
    <string name="add_to_menu">Add to menu</string>

    <string name="my_profile">My Profile</string>
    <string name="change">Change</string>
    <string name="first_and_last_name_pattern">%1$s %2$s</string>

    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="children">Children</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="number">Number</string>
    <string name="age_range">Age range</string>

    <string name="schools">Schools</string>
    <string name="plus_add_school">+ Add school</string>
    <string name="delete">Delete</string>
    <string name="follow">Follow</string>

    <string name="account_settings">Account settings</string>
    <string name="public_profile">Public profile</string>
    <string name="push_notifications">Push notifications</string>
    <string name="access_my_location">Access my location</string>
    <string name="emergency_button">Emergency button</string>
    <string name="logout">Logout</string>
    <string name="ask_question_or_report_a_change">Ask question or report a change</string>

    <string name="location_choose_error">Cannot choose location, try again later</string>

    <string name="update_details">Update details</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

    <string name="the_lobby">The Lobby</string>
    <string name="search">Search</string>

    <string name="plus_add_category">+ Add category</string>

    <string name="chats">Chats</string>
    <string name="chat_settings">Chat settings</string>
    <string name="show_online_status_to_colon">Show online status to:</string>
    <string name="select_all">Select all</string>

    <string name="filter">Filter</string>
    <string name="menu">Menu</string>
    <string name="my_products">My products</string>
    <string name="my_wishlist">My wishlist</string>

    <string name="product_type">Product type</string>
    <string name="select_product_category">Select product category</string>
    <string name="price_range">Price range</string>
    <string name="distance">Distance</string>
    <string name="how_far_do_you_want_to_search_question_mark">How much would you want to search?</string>
    <string name="give_it_for_free">Give it for free</string>
    <string name="how_much_would_you_want_to_pay_question_mark">How much would you want to pay?</string>
    <string name="set_location">Set location</string>

    <string name="product">Product</string>
    <string name="pounds_price_format">£ %1$s</string>

    <string name="contact_user_to_make_an_offer">Contact user to make on offer</string>

    <string name="upload_another_product">Upload another product</string>

    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove</string>
    <string name="from_your_wishlist_question_mark">from your wishlist?</string>

    <string name="yes_coma_remove">Yes, remove</string>

    <string name="add_product">Add Product</string>
    <string name="add_photo">Add photo</string>
    <string name="uploaded_photos">Uploades photos</string>
    <string name="add_title">Add title</string>
    <string name="add_category">Add category</string>
    <string name="ask_for_new_category">Ask for new category</string>
    <string name="price">Price</string>
    <string name="add_description">Add description</string>
    <string name="upload_product">Upload product</string>

    <string name="choose_image_source">Choose image source</string>
    <string name="photo_library">Photo Library</string>
    <string name="camera">Camera</string>

    <string name="congratulations_your_product_has_been_uploaded">Congratulations, your product has been uploaded!</string>
    <string name="back_to_search">Back to search</string>
    <string name="to_my_product_list">To my product list</string>

    <string name="new_message">New message</string>

    <string name="organisation">Organisation</string>
    <string name="details">Details</string>

    <string name="photos">Photos</string>
    <string name="news_feed">News feed</string>
    <string name="members">Members</string>
    <string name="send_a_message">Send a message</string>
    <string name="plus_with_number_pattern">+%s</string>
    <string name="promotion">Promotion</string>
    <string name="get_voucher_code">Get Voucher Code</string>
    <string name="company_will_be_added_to_your_contacts">Company will be added to your contacts</string>
    <string name="see_also">See also</string>
    <string name="reply">Reply</string>

    <string name="create_post">Create post</string>
    <string name="done">Done</string>

    <string name="title">Title</string>
    <string name="insert_title">Insert title</string>
    <string name="post">Post</string>
    <string name="type_something">Type something</string>
    <string name="photo">Photo</string>

    <string name="memory_permission_explanation">We need to memory permission to read your photos</string>

    <string name="user_profile">User Profile</string>
    <string name="number_of_kids">Number of kids</string>
    <string name="remove_from_contacts">Remove from contacts</string>

    <string name="are_you_sure_you_want_to_remove_from_your_contacts_question_mark">Are you sure to remove from your contacts?</string>
    <string name="chats_with_this_user_will_be_lost">Chats with this user will be lost</string>
    <string name="yes_coma_remove_this_contact">Yes, remove this contact</string>
    <string name="no_coma_get_me_out_of_here">No, get me out of here</string>

    <string name="add_girl">Add girl</string>
    <string name="add_boy">Add boy</string>
    <string name="add_baby_on_board">Add baby\n on board</string>

    <string name="friends">Friends</string>
    
    <string name="child_readable_pattern">%s %s old</string>

    <plurals name="week_plural">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>

    <plurals name="month_plural">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

    <plurals name="year_plural">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>

    <string name="girl">Girl</string>
    <string name="boy">Boy</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="baby_on_board">Baby on board</string>

    <string name="add_child">Add child</string>
    <string name="edit_child">Edit child</string>

    <string name="age">Age</string>

    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>

    <string name="please_choose_the_type_of_age">Please choose the type of age.</string>

    <string name="from_your_children_list_question_mark">%s from your children list?</string>

    <string name="from_your_lobby_rooms_list_question_mark">%s from your lobby rooms list?</string>
    <string name="from_our_server_question_mark">%s from your our server?</string>

    <string name="create_category">Create Category</string>

    <string name="public_category">Public category</string>
    <string name="cover_photo">Cover photo</string>
    <string name="add_cover_photo">Add cover photo</string>
    <string name="add_members">Add members</string>

    <string name="you_need_to_fill_all_fields">You need to fill all fields</string>

    <string name="pagination_widget_indication_pattern">%d/%d</string>

    <string name="create_topic">Create topic</string>

    <string name="add_to_chat_contacts">Add to chat contacts</string>
    <string name="any_kids">Any kids</string>

    <string name="categories">Categories</string>

    <string name="selected_location_pattern">Selected location: %s</string>

    <plurals name="mile_plural">
        <item quantity="one">mile</item>
        <item quantity="other">miles</item>
    </plurals>

    <string name="pound_symbol">£</string>
    
    <string name="all_categories">All\ncategories</string>

    <string name="shop_filter_price_pattern">Price\n£%d-%d</string>
    <string name="shop_filter_distance_pattern">%d-%d\nMiles</string>

    <string name="you_need_to_select_photo">You need to select photo</string>
    <string name="you_need_to_select_location">You need to select location</string>
    <string name="please_put_correct_price">Please put correct price</string>
    
    <string name="you_can_add_maximum_of_photos">You can add a maximum of %d photos</string>

    <string name="edit_product">Edit Product</string>
</resources>
