<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/widget_layout">

    <com.mumsapp.android.ui.views.BaseInput
        android:id="@+id/edit_product_details_title"
        style="@style/dialog_form"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/add_title"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mumsapp.android.ui.views.BaseTextView
        android:id="@+id/edit_product_details_category"
        style="@style/text_normal_grey_light"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/add_category"
        android:paddingStart="@dimen/padding_small"
        app:layout_constraintLeft_toLeftOf="@id/edit_product_details_title"
        app:layout_constraintTop_toBottomOf="@id/edit_product_details_title" />

    <com.mumsapp.android.ui.views.BaseTextView
        style="@style/text_normal_green_light"
        android:text="@string/ask_for_new_category"
        app:layout_constraintBottom_toBottomOf="@id/edit_product_details_category"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_product_details_category" />

    <com.mumsapp.android.ui.views.BaseInput
        android:id="@+id/edit_product_details_price"
        style="@style/dialog_form"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/edit_product_details_category" />

    <com.mumsapp.android.ui.views.BaseEditText
        android:id="@+id/edit_product_details_description"
        style="@style/big_form_with_borders_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_product_details_description_height"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/add_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_product_details_price" />
</android.support.constraint.ConstraintLayout>