<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/default_layout"
    android:orientation="vertical">

    <com.mumsapp.android.ui.views.TopBar
        android:id="@+id/create_lobby_category_top_bar"
        style="@style/top_bar_back_right_text"
        app:layout_constraintTop_toTopOf="parent"
        app:topBarTitle="@string/create_category"
        app:topBarRightText="@string/done"/>

    <android.support.v4.widget.NestedScrollView
        style="@style/default_scroll">

        <android.support.constraint.ConstraintLayout
            style="@style/default_layout">

            <com.mumsapp.android.ui.views.CardSwitch
                android:id="@+id/create_lobby_category_public_switch"
                style="@style/default_card_edit_text"
                android:layout_marginTop="@dimen/padding_big"
                android:text="@string/public_category"
                android:checked="true"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.mumsapp.android.ui.views.BaseTextView
                android:id="@+id/create_lobby_category_title_label"
                style="@style/text_small_grey_light"
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginStart="@dimen/padding_default"
                android:text="@string/title"
                app:layout_constraintTop_toBottomOf="@id/create_lobby_category_public_switch"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <com.mumsapp.android.ui.views.CardEditText
                android:id="@+id/create_lobby_category_title_input"
                style="@style/default_card_edit_text"
                android:layout_marginTop="@dimen/padding_medium"
                android:hint="@string/insert_title"
                app:layout_constraintTop_toBottomOf="@id/create_lobby_category_title_label"/>

            <com.mumsapp.android.ui.views.BaseTextView
                android:id="@+id/create_lobby_category_content_label"
                style="@style/text_small_grey_light"
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginStart="@dimen/padding_default"
                android:text="@string/title"
                app:layout_constraintTop_toBottomOf="@id/create_lobby_category_title_input"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <com.mumsapp.android.ui.views.CardEditText
                android:id="@+id/create_lobby_category_content_input"
                style="@style/default_card_edit_text"
                android:layout_height="@dimen/product_big_image_height"
                android:layout_marginTop="@dimen/padding_medium"
                android:hint="@string/type_something"
                app:layout_constraintTop_toBottomOf="@id/create_lobby_category_content_label" />

            <com.mumsapp.android.ui.views.BaseTextView
                android:id="@+id/create_lobby_category_photo_label"
                style="@style/text_small_grey_light"
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginStart="@dimen/padding_default"
                android:text="@string/cover_photo"
                app:layout_constraintTop_toBottomOf="@id/create_lobby_category_content_input"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <com.mumsapp.android.ui.views.AddPhotoButton
                android:id="@+id/create_lobby_category_add_photo_button"
                style="@style/card_squared"
                android:layout_marginTop="@dimen/padding_default"
                app:layout_constraintTop_toBottomOf="@id/create_lobby_category_photo_label"
                android:text="@string/add_cover_photo"/>

            <com.mumsapp.android.ui.views.BaseImageView
                android:id="@+id/create_lobby_category_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/create_lobby_category_add_photo_button"
                app:layout_constraintBottom_toBottomOf="@id/create_lobby_category_add_photo_button"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_scroll_view_bottom"
                app:layout_constraintTop_toBottomOf="@id/create_lobby_category_image"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>